// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input gracefully handles an out of bound selectedTab value 1`] = `
<div
  class="tabs"
>
  <div
    class="indicator"
  />
  <span
    style="display: inline-block; min-width: 20px; width: 20px;"
  />
  <button
    class="MuiButtonBase-root-211 MuiButton-root-185 MuiButton-text-187 MuiButton-flat-190 button active"
    tabindex="0"
    title=""
    type="button"
  >
    <span
      class="MuiButton-label-186"
    >
      <span>
        tab1
      </span>
    </span>
    <span
      class="MuiTouchRipple-root-214"
    />
  </button>
  <button
    class="MuiButtonBase-root-211 MuiButton-root-185 MuiButton-text-187 MuiButton-flat-190 button"
    tabindex="0"
    title=""
    type="button"
  >
    <span
      class="MuiButton-label-186"
    >
      <span>
        tab2
      </span>
    </span>
    <span
      class="MuiTouchRipple-root-214"
    />
  </button>
</div>
`;

exports[`Input renders with the right styles by default 1`] = `
<div
  class="tabs"
>
  <div
    class="indicator"
  />
  <span
    style="display: inline-block; min-width: 20px; width: 20px;"
  />
  <button
    class="MuiButtonBase-root-35 MuiButton-root-9 MuiButton-text-11 MuiButton-flat-14 button active"
    tabindex="0"
    title=""
    type="button"
  >
    <span
      class="MuiButton-label-10"
    >
      <span>
        tab1
      </span>
    </span>
    <span
      class="MuiTouchRipple-root-38"
    />
  </button>
  <button
    class="MuiButtonBase-root-35 MuiButton-root-9 MuiButton-text-11 MuiButton-flat-14 button"
    tabindex="0"
    title=""
    type="button"
  >
    <span
      class="MuiButton-label-10"
    >
      <span>
        tab2
      </span>
    </span>
    <span
      class="MuiTouchRipple-root-38"
    />
  </button>
</div>
`;
